[package]
name = "tradestation-rs"
version = "0.1.2"
authors = ["Convexity Guild <contact@convexityguild.com>", "Antonio Hickey <contact@antoniohickey.com>"]
description = "High level, fully featured, and ergonomic Rust client for the TradeStation API."
documentation = "https://docs.rs/tradestation-rs/latest/tradestation-rs/index.html"
homepage = "https://crates.io/crates/tradestation-rs"
repository = "https://github.com/convexity-guild/tradestation-rs"
readme = "README.md"
keywords = ["tradestation", "finance", "quant", "trading"]
license = "MIT"
exclude = ["/.github/"]
include = ["README.md", "src/**/*", "examples/**/*"]
edition = "2021"

[lib]
name = "tradestation_rs"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
